--- a/docker/udemy-docker-and-kubernetes/complex-elastic-beanstalk/worker/Dockerfile.dev
+++ b/docker/udemy-docker-and-kubernetes/complex-elastic-beanstalk/worker/Dockerfile.dev
@@ -1,9 +1,9 @@
 FROM node:alpine
-WORKDIR /app
+WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
 
 # docker build -f Dockerfile.dev .
 # docker run <image id>
