--- a/databases/udemy-mysql-bootcamp/join-us-app/package.json
+++ b/databases/udemy-mysql-bootcamp/join-us-app/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
     "faker": "^4.1.0",
     "mysql": "^2.17.1"
   }
